--- a/package.json
+++ b/package.json
@@ -1,34 +1,55 @@
 {
-  "name": "@oasisprotocol/deoxysii",
-  "version": "0.0.5",
-  "description": "Deoxys-II-256-128",
-  "main": "./deoxysii",
-  "types": "./deoxysii.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "bench": "node ./bench/bench.js",
-    "test": "mocha",
-    "lint": "eslint *.js ./test ./bench"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/oasisprotocol/deoxysii-js.git"
-  },
-  "license": "MIT",
-  "author": "Oasis Protocol Foundation <info@oasisprotocol.org>",
-  "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.11",
-    "@types/uint32": "^0.2.0",
-    "benchmark": "^2.1.4",
-    "chai": "*",
-    "eslint": "^5.14.0",
-    "mocha": "^6.1.4",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "bsaes": "0.0.2",
-    "uint32": "^0.2.1"
-  }
+	"name": "@oasisprotocol/deoxysii",
+	"version": "0.0.6",
+	"description": "Deoxys-II-256-128",
+	"sideEffects": false,
+	"files": ["dist", "!dist/*.tsbuildinfo", "src", "!src/*.json"],
+	"main": "./dist/_cjs/index.js",
+	"module": "./dist/_esm/index.js",
+	"types": "./dist/_types/index.d.ts",
+	"typings": "./dist/_types/index.d.ts",
+	"exports": {
+		"node": {
+			"import": "./dist/_esm/index.js",
+			"require": "./dist/_cjs/index.cjs",
+			"types": "./dist/_types/index.d.ts"
+		},
+		"types": "./dist/_types/index.d.ts",
+		"default": "./dist/_esm/index.js"
+	},
+	"scripts": {
+		"bench": "pnpm vitest bench src/*.bench.ts",
+		"test": "vitest",
+		"coverage": "vitest run --coverage --coverage.exclude=scripts --coverage.exclude='src/*.bench.ts'",
+		"lint": "biome check .",
+		"format": "biome format --write .",
+		"clean": "rm -rf dist",
+		"build": "npm run build:cjs && npm run build:esm && npm run build:types",
+		"build:cjs": "tsc --project ./tsconfig.build.json --module commonjs --outDir ./dist/_cjs --removeComments --verbatimModuleSyntax false && printf '{\"type\":\"commonjs\"}' > ./dist/_cjs/package.json && node scripts/rename-cjs.mjs",
+		"build:esm": "tsc --project ./tsconfig.build.json --module es2015 --outDir ./dist/_esm && printf '{\"type\": \"module\",\"sideEffects\":false}' > ./dist/_esm/package.json",
+		"build:types": "tsc --project ./tsconfig.build.json --module esnext --declarationDir ./dist/_types --emitDeclarationOnly --declaration --declarationMap",
+		"prepublishOnly": "npm run build"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/oasisprotocol/deoxysii-js.git"
+	},
+	"license": "MIT",
+	"author": "Oasis Protocol Foundation <info@oasisprotocol.org>",
+	"devDependencies": {
+		"@biomejs/biome": "^1.7.0",
+		"@types/node": "18.x",
+		"@vitest/coverage-v8": "^1.5.3",
+		"benchmark": "^2.1.4",
+		"vitest": "^1.5.3",
+		"typescript": ">=5.0.4"
+	},
+	"peerDependencies": {
+		"typescript": ">=5.0.4"
+	},
+	"peerDependenciesMeta": {
+		"typescript": {
+			"optional": true
+		}
+	}
 }
