--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "checkJs": true,
-    "resolveJsonModule": true,
-
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "removeComments": true,
-  },
-  "files": ["./deoxysii.js"]
+	// This configuration is used for local development and type checking.
+	"extends": "./tsconfig.base.json",
+	"include": ["src"]
 }
